# music-librarian

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/music_librarian/: __init__.py  artwork.py  clean.py  cli.py  config.py  convert.py  ignore.py  lastfm.py  library.py  lyrics.py  normalize.py  qobuz.py  transfer.py
tests/: conftest.py  test_artwork.py  test_cli.py  test_convert.py  test_ignore.py  test_lastfm.py  test_library.py  test_lyrics.py  test_normalize.py  test_qobuz.py  test_transfer.py
