[project]
name = "music-librarian"
version = "0.1.0"
description = "CLI tool to manage a music library with Qobuz integration"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.25",
    "mutagen>=1.47",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.scripts]
music-librarian = "music_librarian.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "respx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
